# gls_loglaw

./: README.md  environment_full.yml  environment_minimal.yml  pyproject.toml
examples/: example_baseline.py  example_opt.py
examples/Samie_JFM_2018/: Samie_2018.mat
notebooks/: example_baseline.ipynb  example_opt.ipynb
src/: bl_profile.py  fit_tools.py  hot_wire.py  opt_tools.py  plot_tools.py  stats_tools.py
