[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gls_loglaw"
version = "0.1.0"
description = "Generalised least squares applied to the log-law velocity profile"
authors = [
    { name="Manuel Aguiar Ferreira", email="m.aguiar-ferreira@soton.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-image",
    "matplotlib",
    "tol-colors"
]

[tool.setuptools.packages.find]
where = ["src"]